# openrole

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: careershift_inspect.py  careershift_login.py  check_env.py  handshake_login.py  install_careershift.sh  install_handshake.sh  install_jobspy.sh  migrate_db.py  run_streamlit.sh
src/openrole/: __init__.py  config.py
src/openrole/agents/: __init__.py  app_assistant.py  contact_validation.py  draft_evaluator.py  email_writer.py  job_context.py  job_ingestion.py  outreach_prompts.py  people_discovery.py  person_research.py  resume_optimizer.py
src/openrole/db/: __init__.py  migrate.py  models.py  repository.py  session.py
src/openrole/graph/: __init__.py  checkpoint.py  main_graph.py  pipeline_runner.py  routing.py  state.py
src/openrole/llm/: __init__.py  openai_client.py  parse.py  provider.py  vertex.py
src/openrole/schemas/: __init__.py  application.py  contact.py  job.py  job_context.py  pipeline.py  research.py  resume_analysis.py
src/openrole/scrapers/: __init__.py  ats_apis.py  careershift_auth.py  careershift_client.py  careershift_validate.py  handshake_auth.py  handshake_client.py  location_match.py  page_meta.py  (+2 more)
tests/: test_candidate_profile.py  test_careershift.py  test_careershift_validate.py  test_domain_resolver.py  test_email_writer_batch.py  test_foundation.py  test_handshake_auth.py  test_job_context.py  test_job_ingestion.py  test_llm_parse.py  test_m4_apply.py  test_m5_graph.py  test_outreach_prompts.py  test_people_discovery.py  test_repository.py  test_workday_jobspy.py
(+18 files in other folders)
