[project]
name = "openrole"
version = "0.1.0"
description = "Job search research pipeline: ingestion, people discovery, outreach drafts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenRole contributors" }]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "pypdf>=4.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=4.0",
    "streamlit>=1.32",
]

[project.optional-dependencies]
jobspy = [
    "python-jobspy>=1.1.82",
    "numpy>=1.26",
    "pandas>=2.1",
    "tls-client>=1.0",
    "markdownify>=1.1",
]
handshake = [
    "handshake-mcp-server>=0.1.0",
    "mcp>=1.0",
]
careershift = [
    "patchright>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
openrole-migrate = "openrole.db.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openrole"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
